microconfig-core/src/test/resources/repo/components/exceptions/bad/badDelimeter/exception.y
Yaml property must contain ':' as delimiter.
Bad property: 'key=value' in ../components/exceptions/bad/badDelimeter/application.y.yaml:1